fixed the overflow issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,6 +44,11 @@ a:visited{
 }
 
 /* handles content next to navbar and will only contain palcement css*/
+
+.content{
+  overflow-y: auto;
+}
+
 .headline{
   width: 100%;
   text-align: center;
@@ -53,12 +58,11 @@ a:visited{
 
 .center{
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 50px;
-  margin-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 100px;
 }
 
 .inline{
